--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       #- ng build --configuration production --aot
   post_build:
      commands:
-      - aws s3 sync dist s3://${S3_BUCKET}
+      - aws s3 sync dist/angular-hello-world/* s3://${S3_BUCKET}
       - echo "Build completed on `date`"
 artifacts:
   files:
