--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
   variables:
-    S3_BUCKET: "angulartest1234"
+    S3_BUCKET: "angulartest12345"
 phases:
   install:
     runtime-versions:
@@ -22,6 +22,7 @@ phases:
       - aws s3 sync dist/angular-hello-world/ s3://${S3_BUCKET}
       - echo "Build completed on `date`"
       - aws s3 website s3://${S3_BUCKET} --index-document index.html 
+      aws s3api put-bucket-acl --bucket ${BUCKET_NAME} --acl public-read
 artifacts:
   files:
       - '**/*'
