--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
   variables:
-    S3_BUCKET: "angulartest12345"
+    S3_BUCKET: "angulartesting123"
 phases:
   install:
     runtime-versions:
