--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
       - aws s3 sync dist/angular-hello-world/ s3://${S3_BUCKET}
       - echo "Build completed on `date`"
       - aws s3 website s3://${S3_BUCKET} --index-document index.html 
-      - aws cloudfront create-invalidation --distribution-id E28CEHDCMP302M --paths '/*'
+      - aws cloudfront create-invalidation --distribution-id E3G8ICLROW9X0I --paths '/*'
      
 
 artifacts:
